# GraphicCore

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGLFW.cmake
demo/: CMakeLists.txt  demo.cpp
src/: CMakeLists.txt
src/GraphicCore/: CMakeLists.txt  GraphicCore.cpp  GraphicCore.h  TypeWrapers.cpp  TypeWrapers.h  api.h
src/common/: CMakeLists.txt  ImgIO.cpp  ImgIO.h  Logger.cpp  Logger.h  Matrix.h  ObjectHandler.h  Vector.h  api.h  enum.h  shmem.h  types.h
src/gapi/: CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  Geometry.cpp  Geometry.h  RenderPass.cpp  RenderPass.h  RenderPassConstantInput.cpp  RenderPassConstantInput.h  RenderPassInput.cpp  RenderPassInput.h  RenderPassInstanceArrayInput.cpp  RenderPassInstanceArrayInput.h  RenderPassOutput.cpp  RenderPassOutput.h  RenderPassStage.cpp  RenderPassStage.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  api.h  enum.h  gapi.cpp  gapi.h
src/llr/: CMakeLists.txt  ConstantBuffer.cpp  ConstantBuffer.h  Framebuffer.cpp  Framebuffer.h  GlAdapter.cpp  GlAdapter.h  IndexBuffer.cpp  IndexBuffer.h  ReferenceCounter.cpp  ReferenceCounter.h  Shader.cpp  Shader.h  Texture2d.cpp  Texture2d.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h  VertexBuffer.cpp  VertexBuffer.h  api.cpp  api.h  enum.h  helper.cpp  helper.h  llr.cpp  llr.h
src/wnd/: CMakeLists.txt  IRenderer.h  api.h  window.cpp  window.h
tests/: CMakeLists.txt  common_tests.cpp  llr_tests.cpp
